# GALGAGAME

./: .editorconfig  .gitignore  Dockerfile-game  LICENSE  Makefile  README.md  TODO  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  elm-package.json  elmchat.cabal  gulpfile.js  package-lock.json  package.json  prod.env.secret  requirements.txt  serve.sh  stack.yaml  stormcards.cabal  vanagloria.cabal
.circleci/: Dockerfile  config.yml
.hooks/: pre-commit
app/: Main.hs
client/: .dockerignore  Dockerfile  Dockerfile.build  elm-analyse.json  elm-package.json  elm.json  gulpfile.babel.js  gulpfile.js  nginx.conf  package-lock.json  package.json
client/elm/: Audio.elm  Carousel.elm  Collision.elm  Colour.elm  Drag.elm  Error.elm  Fetcher.elm  Form.elm  Keyboard.elm  Line.elm  Listener.elm  Main.elm  Mode.elm  Mouse.elm  Ports.elm  Quaternion.elm  Render.elm  Stats.elm  TimeLimit.elm  Transform.elm  Unproject.elm  Util.elm
client/elm/.Example/: Messages.elm  State.elm  Types.elm  View.elm
client/elm/Animation/: Decoders.elm  Shaders.elm  State.elm  Types.elm  View.elm
client/elm/Assets/: Fetch.elm  Messages.elm  State.elm  Types.elm
client/elm/Audio/: State.elm  Types.elm
client/elm/Buttons/: State.elm  Types.elm  View.elm
client/elm/Card/: Decoders.elm  Types.elm
client/elm/CharacterSelect/: State.elm  Types.elm  View.elm
client/elm/Chat/: Decoders.elm  (+4 more)
client/html/: game.hbs  game.html  index.hbs  index.html
client/js/: start.js
client/sass/: _big-text.scss  _buttons.scss  _canvas.scss  _card.scss  _character-select.scss  _chat.scss  _clock.scss  _connecting.scss  _connection-lost.scss  _create.scss  _deckbuilding.scss  _endgame.scss  _feedback.scss  _fonts.scss  _form.scss  _game.scss  _hamburger.scss  _hand.scss  _input-group.scss  _lab.scss  _leaderboard.scss  _league.scss  _life.scss  _login.scss  _menu.scss  _names.scss  _notifications.scss  _presence.scss  _profile.scss  _replay.scss  _runeSelect.scss  _settings.scss  _signup.scss  _spinner.scss  _stack.scss  _status.scss  _theme.scss  _version-warning.scss  _waiting.scss  main.scss
client/ssl/: www.galgagame.com.ca-bundle.secret  www.galgagame.com.key.secret  www.playhubris.com.ca-bundle.secret  www.playhubris.com.key.secret  www.ringofworlds.com.ca-bundle.secret  www.ringofworlds.com.key.secret
database/: Dockerfile  init.sql
database/migrations/: add_indexes.sql  add_progress.sql  add_replay_display_usernames.sql  username_to_id.sql
elm/: Audio.elm  Card.elm  CharacterSelect.elm  Chat.elm  Cube.elm  Drag.elm  GameState.elm  Listener.elm  Main.elm  Messages.elm  Model.elm  Ports.elm  Raymarch.elm  Util.elm  Vfx.elm
elm/Card/: Decoders.elm  View.elm
elm/CharacterSelect/: Messages.elm  State.elm  Types.elm  View.elm
elm/Chat/: State.elm  Types.elm  View.elm
elm/Drag/: View.elm
elm/GameState/: Decoders.elm  State.elm  Types.elm  View.elm
elm/Lobby/: Messages.elm  State.elm  Types.elm  View.elm
elm/Main/: Messages.elm  State.elm  Types.elm  View.elm
elm/Menu/: Messages.elm  View.elm
elm/Model/: Decoders.elm  State.elm  Types.elm  View.elm
elm/Raymarch/: Shaders.elm  State.elm  View.elm
game-base/: Dockerfile
redis/: redis.prod.env.secret
sass/: _card.scss  _character-select.scss  _chat.scss  _connecting.scss  _endgame.scss  _hand.scss  _life.scss  _menu.scss  _stack.scss  _turn.scss  _version-warning.scss  _waiting.scss  main.scss
scripts/: copyHooks  decryptSecrets  decryptSecrets.sh  deploy  deploy.sh  encryptSecrets  encryptSecrets.sh  flip  logs  makeFakeCertificates  newElmModule  newElmModule.sh  purgeOtherDroplets  serverBuilder  sshDev  systemMessage  verifySsl
server/: .ghci  Dockerfile  LICENSE  circleci.stack.yaml  galgagame.cabal  hubris.cabal  prod.Dockerfile  ringofworlds.cabal  stack.yaml  stormcards.cabal
server/app/: Main.hs
server/src/: Act.hs  ArtificalIntelligence.hs  ArtificialIntelligence.hs  ArtificialIntelligence.hs-boot  Auth.hs  Babs.hs  Bounce.hs  Card.hs  CardAnim.hs  Cards.hs  Cards.hs-boot  Characters.hs  Client.hs  Command.hs  Config.hs  Database.hs  DeckBuilding.hs  DeckBuilding.hs-boot  Discard.hs  Ease.hs  Encounter.hs  GameCommand.hs  GameState.hs  GodMode.hs  HandCard.hs  Life.hs  Limbo.hs  Log.hs  Metrics.hs  Mirror.hs  Model.hs  ModelDiff.hs  Negotiation.hs  Outcome.hs  Player.hs  Possibility.hs  Possibility.hs-boot  Presence.hs  Quest.hs  Replay.hs  (+17 more)
server/src/Auth/: Apps.hs  Schema.hs  Views.hs
server/src/Browse/: Apps.hs  Views.hs
server/src/DSL/: Alpha.hs  AlphaF.hs  Anim.hs  AnimF.hs  Beta.hs  Log.hs  Util.hs
server/src/DSL/Alpha/: Actions.hs  DSL.hs  DSL.hs-boot  Interpreters.hs
server/src/DSL/AlphaF/: Actions.hs  DSL.hs  DSL.hs-boot  Interpreters.hs
server/src/DSL/Anim/: Actions.hs  DSL.hs  Interpreters.hs
server/src/DSL/AnimF/: Actions.hs  DSL.hs  Interpreters.hs
server/src/DSL/Beta/: Actions.hs  DSL.hs  DSL.hs-boot  Interpreters.hs
server/src/DSL/BetaF/: Actions.hs  DSL.hs  DSL.hs-boot  Interpreters.hs
server/src/Feedback/: Apps.hs  Schema.hs  Views.hs
server/src/Leaderboard/: Apps.hs  Leaderboard.hs  Views.hs
server/src/League/: Apps.hs  Schema.hs  Views.hs
server/src/Presence/: Apps.hs  Presence.hs  Views.hs
server/src/Profile/: Apps.hs  Views.hs
server/src/Replay/: Active.hs  Apps.hs  Final.hs  Schema.hs  Views.hs
server/src/Stats/: Experience.hs  Progress.hs  Progress.hs-boot  Schema.hs  Stats.hs
server/src/User/: Apps.hs  User.hs
server/src/World/: Act.hs  Decision.hs  Encounter.hs  Pos.hs  PvpRoom.hs  Schema.hs  Tarot.hs  World.hs  WorldKey.hs  WorldProgress.hs  WorldTree.hs
server/test/: GameSpec.hs  Instances.hs  MirrorSpec.hs  Spec.hs  StackSpec.hs
src/: ArtificalIntelligence.hs  Cards.hs  Characters.hs  Client.hs  GameState.hs  Main.elm  Model.hs  Room.hs  Server.hs  Util.hs
static/: Chat.js  Drag.js  GameState.js  Messages.js  Util.js  index.html  main.css  main.min.css
static/img/: boomerang.svg~  echo-ripples.svg~  heart-bottle.svg~  mirror-mirror.svg~  pretty-fangs.svg~  shield-reflect.svg~  thor-fist.svg~
test/: Spec.hs
(+342 files in other folders)
