name:                galgagame
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/RoganMurley/GALGAGAME
license:             MIT
license-file:        LICENSE
author:              Rogan Murley
maintainer:          rogan@roganmurley.com
copyright:           2022 Rogan Murley
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Act
                     , ArtificialIntelligence
                     , Auth.Apps
                     , Auth.Views
                     , Auth.Schema
                     , Bounce
                     , Card
                     , CardAnim
                     , Cards
                     , Client
                     , Command
                     , Config
                     , Database
                     , DeckBuilding
                     , Discard
                     , DSL.Alpha
                     , DSL.Anim
                     , DSL.Beta
                     , Ease
                     , Encounter
                     , Feedback.Apps
                     , Feedback.Schema
                     , Feedback.Views
                     , GameCommand
                     , GameState
                     , GodMode
                     , HandCard
                     , Leaderboard.Apps
                     , Leaderboard.Leaderboard
                     , Leaderboard.Views
                     , League.Apps
                     , League.Schema
                     , League.Views
                     , Life
                     , Log
                     , Metrics
                     , Mirror
                     , Model
                     , ModelDiff
                     , Negotiation
                     , Outcome
                     , Player
                     , Presence.Apps
                     , Presence.Presence
                     , Presence.Views
                     , Profile.Apps
                     , Profile.Views
                     , Quest
                     , Replay.Active
                     , Replay.Apps
                     , Replay.Final
                     , Replay.Views
                     , Replay.Schema
                     , ResolveData
                     , Room
                     , Scenario
                     , Schema
                     , Server
                     , Stack
                     , StackCard
                     , Start
                     , Stats.Experience
                     , Stats.Progress
                     , Stats.Schema
                     , Stats.Stats
                     , StatusEff
                     , Transmutation
                     , Wheel
                     , User.Apps
                     , User.User
                     , Util
  other-modules:       DSL.Alpha.Actions
                     , DSL.Alpha.DSL
                     , DSL.Alpha.Interpreters
                     , DSL.Anim.Actions
                     , DSL.Anim.DSL
                     , DSL.Anim.Interpreters
                     , DSL.Beta.Actions
                     , DSL.Beta.DSL
                     , DSL.Beta.Interpreters
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bcrypt
                     , beam-core
                     , beam-postgres
                     , bytestring
                     , containers
                     , cookie
                     , datadog
                     , deepseq
                     , free
                     , freer-simple
                     , guid
                     , hedis
                     , hslogger
                     , http-types
                     , lifted-base
                     , monad-control
                     , postgresql-simple
                     , random
                     , random-shuffle
                     , resource-pool
                     , safe
                     , scotty
                     , scotty-cookie
                     , semigroups
                     , stm
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , wai
                     , websockets
  ghc-options:         -Wall -Werror -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , NamedFieldPuns
                     , ScopedTypeVariables
                     , DeriveFunctor
                     , UnicodeSyntax
                     , ExistentialQuantification
                     , TypeOperators
                     , DeriveGeneric
                     , DeriveAnyClass

executable galgagame
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:       base
                     , aeson
                     , containers
                     , cookie
                     , datadog
                     , guid
                     , hedis
                     , hslogger
                     , http-types
                     , lifted-base
                     , postgresql-simple
                     , random
                     , resource-pool
                     , galgagame
                     , safe
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , stm
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , NamedFieldPuns
                     , ImportQualifiedPost

test-suite galgagame-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quickcheck-instances
                     , random
                     , galgagame
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  other-modules:       StackSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , ImportQualifiedPost

source-repository head
  type:     git
  location: https://github.com/RoganMurley/galgagame
