name:                hubris
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/RoganMurley/hubris
license:             MIT
license-file:        LICENSE
author:              Rogan Murley
maintainer:          rogan@roganmurley.com
copyright:           2018 Rogan Murley
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Act
                     , ArtificalIntelligence
                     , Auth
                     , Cards
                     , Characters
                     , Client
                     , Command
                     , DSL.Alpha
                     , DSL.Anim
                     , DSL.Beta
                     , DSL.Log
                     , DSL.Util
                     , GameCommand
                     , GameState
                     , Mirror
                     , Model
                     , Negotiation
                     , Outcome
                     , Player
                     , Room
                     , Server
                     , Username
                     , Util
  other-modules:       DSL.Alpha.Actions
                     , DSL.Alpha.DSL
                     , DSL.Alpha.Interpreters
                     , DSL.Anim.Actions
                     , DSL.Anim.DSL
                     , DSL.Anim.Interpreters
                     , DSL.Beta.Actions
                     , DSL.Beta.DSL
                     , DSL.Beta.Interpreters
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bcrypt
                     , bytestring
                     , containers
                     , cookie
                     , free
                     , guid
                     , hedis
                     , hslogger
                     , http-types
                     , random
                     , random-shuffle
                     , safe
                     , scotty
                     , scotty-cookie
                     , stm
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , wai
                     , websockets
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , NamedFieldPuns
                     , ScopedTypeVariables
                     , DeriveFunctor
                     , UnicodeSyntax
                     , ExistentialQuantification

executable hubris
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , aeson
                     , cookie
                     , guid
                     , hedis
                     , hslogger
                     , http-types
                     , random
                     , safe
                     , string-conversions
                     , text
                     , transformers
                     , stm
                     , hubris
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , NamedFieldPuns

test-suite hubris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quickcheck-instances
                     , random
                     , hubris
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  other-modules:       Instances
                     , MirrorSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards

source-repository head
  type:     git
  location: https://github.com/githubuser/hubris
