name:                stormcards
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/stormcards#readme
license:             BSD3
license-file:        LICENSE
author:              Rogan Murley
maintainer:          Rogan@roganmurley.com
copyright:           2016 Rogan Murley
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ArtificalIntelligence
                     , Auth
                     , Cards
                     , Characters
                     , Client
                     , GameState
                     , Model
                     , Player
                     , Room
                     , Server
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , guid
                     , random
                     , random-shuffle
                     , safe
                     , scotty
                     , scotty-cookie
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , websockets
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , NamedFieldPuns

executable stormcards
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , aeson
                     , http-types
                     , random
                     , safe
                     , string-conversions
                     , text
                     , transformers
                     , stormcards
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , NamedFieldPuns

test-suite stormcards-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , random
                     , tasty
                     , tasty-hunit
                     , stormcards
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards

source-repository head
  type:     git
  location: https://github.com/githubuser/stormcards
